--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,3 +7,21 @@
     display: flex;
     flex-direction: column;
 }
+
+
+@media screen and (max-width: 1024px) {
+ 
+}
+
+@media screen and (max-width: 800px) {
+  
+}
+
+
+@media screen and (max-width: 720px) {
+ 
+}
+
+@media screen and (max-width: 375px) {
+  
+}
