--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -17,6 +17,8 @@
     font-size: 40px;
     line-height: 46px;
     color: #1A1B22;
+    margin:0;
+    padding: 0;
 }
 
 .search-results__button {
@@ -30,9 +32,36 @@
     font-size: 18px;
     line-height: 24px;
     color: #1A1B22;
-    border:0px;
+    border: 0px;
     cursor: pointer;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .search-results{
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .search-results{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .search-results{
+        padding-top: 32px;
+    }
+    .search-results__title{
+        text-align: center;
+        font-size: 30px;
+line-height: 34px;
+    }
+}
+
+@media screen and (max-width: 375px) {}
