--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,5 +1,5 @@
 .news-card {
-    width: 400px;
+    max-width: 400px;
     background: #FFFFFF;
     border-radius: 16px;
     -webkit-border-radius: 16px;
@@ -75,4 +75,51 @@
     top: 24px;
     right: 24px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1024px) {
+    .news-card__img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+    }
+    .news-card__title {
+        font-size: 22px;
+        line-height: 24px;
+    }
+    .news-card__button-save {
+        top: 16px;
+        right: 16px
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .news-card {
+        height: 420px;
+    }
+    .news-card__button-save {
+        top: 8px;
+        right: 8px
+    }
+    .news-card__text {
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .news-card__button-save {
+        top: 16px;
+        right: 16px
+    }
+    .news-card{
+        max-width:288px
+    }
+    
+}
+
+@media screen and (max-width: 375px) {
+    
 }
