--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,5 @@
 .search {
     display: flex;
-    /* align-self: center; */
     flex-direction: column;
     align-self: center;
     margin: auto;
@@ -31,34 +30,33 @@
 }
 
 .search-form {
-    background: #FFFFFF;
-    /* simulator/gray/divider */
-    border: 1px solid #D1D2D6;
-    box-sizing: border-box;
-    backdrop-filter: blur(100px);
-    /* Note: backdrop-filter has minimal browser support */
-    border-radius: 100px;
-    width: 608px;
-    height: 64px;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .search-form__input {
+    background: #FFFFFF;
+    border: 1px solid #D1D2D6;
+    box-sizing: border-box;
+    backdrop-filter: blur(100px);
+    border-radius: 100px;
+    width: 100%;
+    height: 64px;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;
     border: 0px;
-    margin-left: 24px;
-    /* identical to box height, or 137% */
-    /* simulator/gray/text */
     color: #B6BCBF;
+    padding-left: 24px;
 }
 
 .search-form__button {
+    position: absolute;
+    right: 0;
     background: #2F71E5;
     box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
     border-radius: 100px;
@@ -80,7 +78,6 @@
         max-width: 452px;
     }
     .search-form {
-        width: 448px;
         height: 56px;
     }
     .search__title {
@@ -95,8 +92,37 @@
         width: 160px;
         height: 56px;
     }
+    .search-form__input {
+        height: 56px;
+    }
 }
 
-@media screen and (max-width: 650px) {}
+@media screen and (max-width: 650px) {
+    .search {
+        max-width: 320px;
+    }
+    .search-form {
+        flex-direction: column;
+        position: static;
+        height: 128px;
+        justify-content: space-between;
+    }
+    .search-form__input {
+        height: 56px;
+        position: static;
+    }
+    .search-form__button {
+        width: 100%;
+        height: 56px;
+        position: static;
+    }
+    .search__subtitle {
+        margin-bottom: 122px;
+    }
+}
 
-@media screen and (max-width: 375px) {}
+@media screen and (max-width: 375px) {
+    .search {
+        max-width: 288px;
+    }
+}
