--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -10,6 +10,10 @@
     justify-content: space-between;
 }
 
+.navigation-open {
+    flex-direction: column;
+}
+
 .navigation__link {
     text-decoration: none;
     font-family: Roboto;
@@ -53,9 +57,26 @@
     cursor: pointer;
 }
 
+.navigation__burger-button {
+    background: url('../../images/burger-button.svg');
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+    background-position: center;
+    border: 0;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in;
+}
+
 .navigation__column-1 {}
 
 .navigation__column-2 {}
+
+.navigation__column-2_mobile {
+    display: flex;
+    flex-direction: column;
+}
 
 @media screen and (max-width: 800px) {
     .navigation {
@@ -74,11 +95,6 @@
     }
 }
 
-@media screen and (max-width: 720px) {
- 
-}
+@media screen and (max-width: 720px) {}
 
-@media screen and (max-width: 375px) {
-  
-}
-
+@media screen and (max-width: 375px) {}
