--- a/src/components/PopupWothForm/PopupWithForm.css
+++ b/src/components/PopupWothForm/PopupWithForm.css
@@ -96,12 +96,37 @@
     margin-bottom: 9px;
 }
 
-.form__label:nth-of-type(2) {
+.form__label {
     margin-top: 16px;
     margin-bottom: 8px;
 }
 
-.form__input:first-of-type {
+.form__text {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin: 0;
+    margin-top: 16px;
+}
+
+.form__text-link {
+    text-decoration: none;
+    color: #2F71E5;
+}
+
+.form__input-error {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #FF0000;
+}
+
+.form__input .form__input:first-of-type {
     color: #000000;
     padding: 0;
     padding-bottom: 13px;
@@ -159,7 +184,7 @@
         width: 238px;
         padding-left: 22px;
         padding-right: 22px;
-        padding-bottom: 25px;
+        padding-bottom: 28px;
     }
     .form__save-button {
         font-size: 14px;
