--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,7 +3,7 @@
 }
 
 .search-results {
-    min-height: 974px;
+    min-height: 814px;
     background: #F5F6F7;
     padding: 80px 104px 80px;
     display: flex;
@@ -17,12 +17,12 @@
     font-size: 40px;
     line-height: 46px;
     color: #1A1B22;
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
 .search-results__button {
-    background: #E8E8E8;
+    background: #FFFFFF;
     border-radius: 80px;
     width: 288px;
     height: 64px;
@@ -37,30 +37,41 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
+    transition: background 0.3s ease-in;
+    -webkit-transition: background 0.3s ease-in;
+    -moz-transition: background 0.3s ease-in;
+    -ms-transition: background 0.3s ease-in;
+    -o-transition: background 0.3s ease-in;
+}
+
+.search-results__button:hover {
+    background: #E8E8E8;
+    opacity: 0.9;
 }
 
 @media screen and (max-width: 1024px) {
-    .search-results{
+    .search-results {
+        min-height: 700px;
         padding-left: 80px;
         padding-right: 80px;
     }
 }
 
 @media screen and (max-width: 800px) {
-    .search-results{
+    .search-results {
         padding-left: 40px;
         padding-right: 40px;
     }
 }
 
 @media screen and (max-width: 720px) {
-    .search-results{
+    .search-results {
         padding-top: 32px;
     }
-    .search-results__title{
+    .search-results__title {
         text-align: center;
         font-size: 30px;
-line-height: 34px;
+        line-height: 34px;
     }
 }
 
