--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -10,8 +10,11 @@
     justify-content: space-between;
 }
 
-.navigation-open {
-    flex-direction: column;
+.navigation_open {
+    background: #1A1B22;
+    padding: 0;
+    border: 0px;
+    position: relative;
 }
 
 .navigation__link {
@@ -69,14 +72,21 @@
     transition: opacity 0.3s ease-in;
 }
 
+.navigation__close-button {
+    background: url('../../images/close-button.svg');
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+    background-position: center;
+    border: 0;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in;
+}
+
 .navigation__column-1 {}
 
 .navigation__column-2 {}
-
-.navigation__column-2_mobile {
-    display: flex;
-    flex-direction: column;
-}
 
 @media screen and (max-width: 800px) {
     .navigation {
@@ -92,6 +102,41 @@
         font-size: 16px;
         width: 152px;
         height: 40px;
+    }
+    .navigation__column-2_mobile {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        bottom: -174px;
+        width: 100%;
+        background: #1A1B22;
+        height: 174px;
+    }
+    .navigation__link_mobile {
+        margin: 0;
+        padding: 0;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 56px;
+        border-bottom: 0;
+        padding-left: 40px;
+        margin-top: 16px;
+    }
+    .navigation__button_mobile {
+        margin-left: auto;
+        margin-right: auto;
+        width: 288px;
+        height: 56px;
+        margin-top: 22px;
+        margin-bottom: 24px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 56px;
     }
 }
 
