--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -64,7 +64,7 @@
 .news-card__button-save {
     width: 40px;
     height: 40px;
-    background-image: url('../../images/icon/Rectangle\ 8.svg');
+    background-image: url('../../images/button-save.svg');
     background-size: 14px 19px;
     background-color: #FFFFFF;
     background-position: center;
@@ -75,9 +75,24 @@
     top: 24px;
     right: 24px;
     cursor: pointer;
+    transition: background-image 0.3s ease-in;
+    -webkit-transition: background-image 0.3s ease-in;
+    -moz-transition: background-image 0.3s ease-in;
+    -ms-transition: background-image 0.3s ease-in;
+    -o-transition: background-image 0.3s ease-in;
+}
+
+.news-card__button-save:hover {
+    background-image: url("../../images/button-save-hover.svg");
 }
 
 @media screen and (max-width: 1024px) {
+    .news-card {
+        height: 420px;
+    }
+    .news-card__date {
+        margin-top: 16px;
+    }
     .news-card__img {
         width: 100%;
         height: 150px;
@@ -86,26 +101,35 @@
     .news-card__title {
         font-size: 22px;
         line-height: 24px;
+        margin-top: 12px;
+    }
+    .news-card__text {
+        margin-top: 10px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        /* number of lines to show */
+        -webkit-box-orient: vertical;
     }
     .news-card__button-save {
         top: 16px;
         right: 16px
     }
+    .news-card__source {
+        margin-top: 12px;
+    }
 }
 
 @media screen and (max-width: 800px) {
     .news-card {
-        height: 420px;
+        height: 440px;
+    }
+    .news-card__text {
+        margin-top: 14px;
     }
     .news-card__button-save {
         top: 8px;
         right: 8px
-    }
-    .news-card__text {
-        -o-text-overflow: ellipsis;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
     }
 }
 
@@ -114,12 +138,9 @@
         top: 16px;
         right: 16px
     }
-    .news-card{
-        max-width:288px
+    .news-card {
+        max-width: 288px
     }
-    
 }
 
-@media screen and (max-width: 375px) {
-    
-}
+@media screen and (max-width: 375px) {}
