feat: Saved News page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@
     background-position-x: center;
     display: flex;
     flex-direction: column;
+    color: #FFFFFF;
 }
 
 @media screen and (max-width: 1024px) {}
