--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -76,6 +76,7 @@
         margin-left: auto;
         margin-right: auto;
         padding: 0;
+        margin-top: 20px
     }
     .footer__lists {
         margin-left: 16px;
@@ -92,8 +93,7 @@
     }
     .footer__social-list {
         align-items: flex-start;
-       text-align: right;
-
+        text-align: right;
     }
     .footer__copyright {
         margin-top: 14px;
