--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -18,6 +18,7 @@
     line-height: 46px;
     color: #1A1B22;
     margin: 0;
+    margin-bottom: 64px;
     padding: 0;
 }
 
@@ -36,6 +37,7 @@
     cursor: pointer;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 64px;
     margin-bottom: 0;
     transition: background 0.3s ease-in;
     -webkit-transition: background 0.3s ease-in;
