--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,31 +1,26 @@
 .news-card-list {
-    margin-top:64px;
-    margin-bottom: 64px;
     width: 100%;
     display: grid;
     grid-template-columns: 32% 32% 32%;
     grid-gap: 16px;
 }
 
-@media screen and (max-width: 1024px) {
- 
-}
+@media screen and (max-width: 1024px) {}
 
 @media screen and (max-width: 800px) {
-  
+    .news-card-list {
+        grid-template-columns: 1fr 1fr;
+    }
 }
-
 
 @media screen and (max-width: 720px) {
- .news-card-list{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 58px;
- }
+    .news-card-list {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        /* margin-top: 58px; */
+    }
 }
 
-@media screen and (max-width: 375px) {
-  
-}
+@media screen and (max-width: 375px) {}
