--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -35,3 +35,9 @@
     margin: 0;
     margin-top: 16px;
 }
+
+@media screen and (max-width: 500px) {
+    .notfound__text {
+        width: 288px;
+    }
+}
