fix: mobile horizontal scroll, semantic corrections, layout fixes

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,13 @@
 .page {
-    
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+@media screen and (max-width: 1024px) {}
+
+@media screen and (max-width: 800px) {}
+
+@media screen and (max-width: 720px) {}
+
+@media screen and (max-width: 375px) {}
