--- a/src/components/PopupWothForm/PopupWithForm.css
+++ b/src/components/PopupWothForm/PopupWithForm.css
@@ -156,6 +156,7 @@
     -ms-grid-column-align: stretch;
     justify-self: stretch;
     border: 0;
+    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
