--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -57,6 +57,11 @@
         padding-left: 80px;
         padding-right: 80px;
     }
+    .search-results__title {
+        text-align: left;
+        font-size: 30px;
+        line-height: 34px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -72,9 +77,16 @@
     }
     .search-results__title {
         text-align: center;
-        font-size: 30px;
-        line-height: 34px;
     }
 }
 
-@media screen and (max-width: 375px) {}
+@media screen and (max-width: 375px) {
+    .search-results {
+        margin: 0;
+        padding: 32px 16px 32px;
+    }
+    .search-results__title {
+        text-align: left;
+        margin-bottom: 58px;
+    }
+}
