--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,5 +1,5 @@
 .news-card {
-    max-width: 400px;
+    max-width: 100%;
     background: #FFFFFF;
     border-radius: 16px;
     -webkit-border-radius: 16px;
@@ -13,9 +13,10 @@
 }
 
 .news-card__img {
-    width: 400px;
+    width: 100%;
     height: 272px;
     overflow: hidden;
+    object-fit: cover;
 }
 
 .news-card__date {
@@ -162,13 +163,13 @@
         right: 16px
     }
     .news-card__source {
-        margin-top: 12px;
+        margin-top: 24px;
     }
     .news-card__text {
         margin-top: 10px;
         overflow: hidden;
         display: -webkit-box;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 4;
         /* number of lines to show */
         -webkit-box-orient: vertical;
     }
@@ -187,6 +188,7 @@
     }
     .news-card__text {
         margin-top: 14px;
+        -webkit-line-clamp: 3;
     }
     .news-card__button-save {
         top: 8px;
@@ -194,6 +196,9 @@
     }
     .news-card__img {
         height: 196px;
+    }
+    .news-card__source {
+        margin-top: 20px;
     }
 }
 
@@ -203,7 +208,13 @@
         right: 16px
     }
     .news-card {
-        max-width: 288px
+        max-width: 288px;
+    }
+    .news-card__text {
+        -webkit-line-clamp: 3;
+    }
+    .news-card__source {
+        margin-top: 18px;
     }
 }
 
