--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,16 +1,23 @@
 .news-card-list {
     width: 100%;
     display: grid;
-    grid-template-columns: 32% 32% 32%;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 16px;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.news-card-list__item {
+    /* max-width: 400px; */
 }
 
 @media screen and (max-width: 1024px) {}
 
 @media screen and (max-width: 800px) {
-    .news-card-list {
+    /* .news-card-list {
         grid-template-columns: 1fr 1fr;
-    }
+    } */
 }
 
 @media screen and (max-width: 720px) {
@@ -23,4 +30,9 @@
     }
 }
 
-@media screen and (max-width: 375px) {}
+@media screen and (max-width: 375px) {
+    .news-card-list {
+        /* margin-left: auto;
+        margin-right: auto; */
+    }
+}
