--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
 }
 
 .footer__copyright {
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -30,7 +30,7 @@
 
 .footer__nav-list-item {
     margin-right: 40px;
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
