--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -28,7 +28,7 @@
 
 .navigation__link {
     text-decoration: none;
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -48,7 +48,7 @@
 
 .navigation__logo {
     text-decoration: none;
-    font-family: Roboto Slab;
+    font-family: Roboto Slab, Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
@@ -65,7 +65,7 @@
     border-color: inherit;
     /* color: #FFFFFF; */
     color: inherit;
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -88,7 +88,7 @@
     /* color: #FFFFFF; */
     color: inherit;
     text-align: left;
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -143,9 +143,9 @@
     transition: opacity 0.3s ease-in;
 }
 
-.navigation__column-1 {}
+.navigation__column-logo {}
 
-.navigation__column-2 {}
+.navigation__column-links {}
 
 @media screen and (max-width: 1024px) {
     .navigation {
@@ -168,7 +168,7 @@
         width: 152px;
         height: 40px;
     }
-    .navigation__column-2_mobile {
+    .navigation__column-links_mobile {
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -184,7 +184,7 @@
     .navigation__link_mobile {
         margin: 0;
         padding: 0;
-        font-family: Roboto;
+        font-family: Roboto, Arial, sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 18px;
@@ -200,7 +200,7 @@
         height: 56px;
         margin-top: 22px;
         margin-bottom: 24px;
-        font-family: Roboto;
+        font-family: Roboto, Arial, sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 18px;
