--- a/src/components/PopupWothForm/PopupWithForm.css
+++ b/src/components/PopupWothForm/PopupWithForm.css
@@ -70,7 +70,7 @@
 }
 
 .form__heading {
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
@@ -102,7 +102,7 @@
 }
 
 .form__text {
-    font-family: Inter;
+    font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -118,7 +118,7 @@
 }
 
 .form__input-error {
-    font-family: Inter;
+    font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -156,7 +156,7 @@
     -ms-grid-column-align: stretch;
     justify-self: stretch;
     border: 0;
-    font-family: Roboto;
+    font-family: Roboto, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -172,7 +172,7 @@
 }
 
 .form__label {
-    font-family: Inter;
+    font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -190,5 +190,11 @@
     .form__save-button {
         font-size: 14px;
         line-height: 17px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .popup__close-button {
+        right: -12px;
     }
 }
