--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -12,7 +12,7 @@
 .preloader__text {
 	color: #B6BCBF;
 	margin: 0;
-	font-family: Roboto;
+	font-family: Roboto, Arial, sans-serif;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 18px;
