--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -182,9 +182,18 @@
         top: 16px;
         right: 16px;
     }
+    .news-card__button-delete {
+        top: 16px;
+        right: 16px;
+    }
+    .news-card__group {
+        top: 16px;
+        left: 16px;
+    }
     .news-card__hover-text {
         top: 16px;
-        width: 100px;
+        right: 60px;
+        min-width: 135px;
     }
     .news-card__source {
         margin-top: 24px;
@@ -218,6 +227,18 @@
         top: 8px;
         right: 8px
     }
+    .news-card__button-delete {
+        top: 8px;
+        right: 8px
+    }
+    .news-card__group {
+        top: 8px;
+        left: 8px;
+    }
+    .news-card__hover-text {
+        top: 8px;
+        min-width: 130px;
+    }
     .news-card__img {
         height: 196px;
     }
@@ -230,6 +251,19 @@
     .news-card__button-save {
         top: 16px;
         right: 16px
+    }
+    .news-card__button-delete {
+        top: 16px;
+        right: 16px
+    }
+    .news-card__hover-text {
+        min-width: 182px;
+        top: 16px;
+        right: 69px;
+    }
+    .news-card__group {
+        top: 16px;
+        left: 16px;
     }
     .news-card {
         max-width: 288px;
