--- a/src/components/PopupWothForm/PopupWithForm.css
+++ b/src/components/PopupWothForm/PopupWithForm.css
@@ -1,5 +1,6 @@
 .popup {
     position: fixed;
+    z-index: 5;
     top: 0;
     left: 0;
     width: 100%;
@@ -115,6 +116,9 @@
 .form__text-link {
     text-decoration: none;
     color: #2F71E5;
+    background-color: #FFFFFF;
+    border: 0;
+    cursor: pointer;
 }
 
 .form__input-error {
@@ -126,16 +130,21 @@
     color: #FF0000;
 }
 
-.form__input .form__input:first-of-type {
+.form__input {
+    padding: 0;
+    padding-bottom: 10px;
+}
+
+/* .form__input .form__input:first-of-type {
     color: #000000;
     padding: 0;
     padding-bottom: 13px;
-}
+} */
 
-.form__input:nth-of-type(2) {
+/* .form__input:nth-of-type(2) {
     padding: 0;
     padding-bottom: 13px;
-}
+} */
 
 .form__input:invalid {
     opacity: 0.2;
