--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -87,6 +87,10 @@
     background: #347EFF;
 }
 
+.search-form__button:active {
+    background: #2A65CC;
+}
+
 @media screen and (max-width: 800px) {
     .search {
         max-width: 452px;
