--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,5 +1,6 @@
 .news-card {
-    max-width: 100%;
+    max-width: 400px;
+    height: 576px;
     background: #FFFFFF;
     border-radius: 16px;
     -webkit-border-radius: 16px;
@@ -37,8 +38,11 @@
     font-size: 26px;
     line-height: 30px;
     margin: 12px 24px 0;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
-
 .news-card__text {
     color: #1A1B22;
     font-family: Roboto, Arial, sans-serif;
@@ -47,6 +51,10 @@
     font-size: 16px;
     line-height: 22px;
     margin: 16px 24px 0;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
 
 .news-card__source {
