--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -11,6 +11,7 @@
     position: relative;
     box-shadow: 0 3px 58px rgb(8 29 45 / 0.1);
     cursor: pointer;
+    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
 }
 
 .news-card__img {
@@ -66,8 +67,16 @@
     line-height: 20px;
     letter-spacing: 0.4px;
     text-transform: uppercase;
-    margin: 18px 24px 0px;
-    padding-bottom: 24px;
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    /* margin: 18px 24px 0px;
+    padding-bottom: 24px; */
+    position: absolute;
+    bottom: 24px;
+    left: 24px;
 }
 
 .news-card__button-save {
@@ -90,7 +99,29 @@
     -ms-transition: background-image 0.3s ease-in;
     -o-transition: background-image 0.3s ease-in;
 }
-
+.news-card__button-save_blue{
+    width: 40px;
+    height: 40px;
+    background-image: url('../../images/bookmark.svg');
+    background-size: 14px 19px;
+    background-color: #FFFFFF;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 8px;
+    border: 0px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    cursor: pointer;
+    transition: background-image 0.3s ease-in;
+    -webkit-transition: background-image 0.3s ease-in;
+    -moz-transition: background-image 0.3s ease-in;
+    -ms-transition: background-image 0.3s ease-in;
+    -o-transition: background-image 0.3s ease-in;
+}
+.news-card__button-save_blue:hover{
+  background-image: url('../../images/bookmark.svg');
+}
 .news-card__hover-text {
     font-family: Roboto, Arial, sans-serif;
     font-style: normal;
@@ -109,6 +140,8 @@
     position: absolute;
     top: 24px;
     right: 69px;
+    z-index: 10;
+    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
 }
 
 .news-card__button-save:hover {
@@ -190,6 +223,10 @@
         top: 16px;
         right: 16px;
     }
+    .news-card__button-save_blue {
+        top: 16px;
+        right: 16px;
+    }
     .news-card__button-delete {
         top: 16px;
         right: 16px;
@@ -202,9 +239,11 @@
         top: 16px;
         right: 60px;
         min-width: 135px;
+        z-index: 10;
     }
     .news-card__source {
-        margin-top: 24px;
+        bottom: 24px;
+        left: 24px;
     }
     .news-card__text {
         margin-top: 10px;
@@ -227,11 +266,25 @@
     .news-card {
         height: 440px;
     }
+    .news-card__date{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+    .news-card__title{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
     .news-card__text {
         margin-top: 14px;
+        margin-left: 16px;
+        margin-right: 16px;
         -webkit-line-clamp: 3;
     }
     .news-card__button-save {
+        top: 8px;
+        right: 8px
+    }
+    .news-card__button-save_blue {
         top: 8px;
         right: 8px
     }
@@ -251,12 +304,17 @@
         height: 196px;
     }
     .news-card__source {
-        margin-top: 20px;
+        bottom: 16px;
+        left: 16px;
     }
 }
 
 @media screen and (max-width: 720px) {
     .news-card__button-save {
+        top: 16px;
+        right: 16px
+    }
+    .news-card__button-save_blue {
         top: 16px;
         right: 16px
     }
