--- a/src/components/PopupWothForm/PopupWithForm.css
+++ b/src/components/PopupWothForm/PopupWithForm.css
@@ -156,7 +156,6 @@
     /* background-color: #000000; */
     background: #E6E8EB;
     border-radius: 100px;
-    color: #FFFFFF;
     margin-top: 24px;
     margin-left: auto;
     margin-right: auto;
@@ -174,6 +173,12 @@
     cursor: pointer;
     transition: opacity 0.3s ease-in;
     color: #B6BCBF;
+}
+
+.form__save-button_blue {
+    background: #2F71E5;
+    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+    color: #FFFFFF;
 }
 
 .form__save-button:hover {
