--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -4,6 +4,8 @@
     padding-top: 62px;
     padding-bottom: 62px;
     background: #F5F6F7;
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 1024px) {
